fix letter-spacing

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -1,3 +1,4 @@
 $btn-text-transform: uppercase;
+$btn-letter-spacing: 0.5;
 
 $expansion-panel-border-radius: 10px;
